<resources>
    <string name="app_name">Waterbalance</string>
    <string name="title1">Концентрация внимания и активная работа мозга</string>
    <string name="subtitle1">Полезная привычка пить воду в течение дня помогает сохранить концентрацию внимания и активную работу мозга</string>
    <string name="title2">Красота и здоровие</string>
    <string name="subtitle2">Употребление достаточного количества воды, оказывает благотворное влияние на организм, помогая сохранить красоту "изнутри"</string>
    <string name="title3">Будьте в форме</string>
    <string name="subtitle3">Стакан воды перед едой не только ускоряет метаболизм, но и помогает съесть меньше</string>
    <string name="growt_sm">Рост, см</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="weight_kg">Вес, кг</string>
    <string name="calculate_water_norm">Рассчитайте суточную норму воды</string>
    <string name="profile">Профиль</string>
    <string name="water">Вода</string>
    <string name="water_s">Вода с газом</string>
    <string name="black_coffe">Черный кофе</string>
    <string name="black_tea">Черный чай</string>
    <string name="strong_alco">Крепкий алкоголь</string>
    <string name="milk">Молоко</string>
    <string name="juice">Сок</string>
    <string name="wine">Вино</string>
    <string name="soda">Газировка</string>
    <string name="yogurt">Йогурт</string>
    <string name="add">Добавить</string>

</resources>
